avoid java11